# ClubChessApp

./: .envPRODUCCIO  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
games/: admin.py  forms.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_rename_data_comentari_data_creacio.py  0003_partida_lloc_partida_ronda_and_more.py  0004_club_perfiljugador.py
games/templates/games/: base.html  confirmar_esborrat.html  detall_partida.html  editar_partida.html  importar_pgn.html  llista_partides.html  nova_partida.html  pujar_partida.html  registre.html
games/templates/registration/: login.html
